kubernetes/gotenberg/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotenberg
  labels:
    app: gotenberg
spec:
  # replicas: 2
  replicas: 1
  selector:
    matchLabels:
      app: gotenberg
  strategy: {}
  template:
    metadata:
      labels:
        app: gotenberg
    spec:
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
      containers:
        - env:
            - name: DISABLE_GOOGLE_CHROME
              value: "1"
            # - name: DEFAULT_WAIT_TIMEOUT
            #   value: "60"
            # - name: MAXIMUM_WAIT_TIMEOUT
            #   value: "60"
          image: gotenberg/gotenberg:8.0.1
          imagePullPolicy: IfNotPresent
          name: gotenberg
          command: ["gotenberg", "--api-timeout=180s", "--libreoffice-restart-after=5", "--libreoffice-auto-start=true"]
          ports:
            - containerPort: 3000
              name: http
          resources: {}
          # resources:
          #   # requests as specified in https://gotenberg.dev/docs/get-started/kubernetes
          #   requests:
          #     memory: "512Mi"
          #     cpu: "200m"
          #   limits:
          #     memory: "1Gi"
          #     cpu: "500m"
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 60
            timeoutSeconds: 5
            failureThreshold: 5
      restartPolicy: Always
status: {}
