kubernetes/gotenberg/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gotenberg
  name: gotenberg
spec:
  type: NodePort
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
      nodePort: 31300
  selector:
    app: gotenberg
status:
  loadBalancer: {}
