kubernetes/gotenberg/network.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gotenberg-deny-all
  namespace: default
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      app: gotenberg
  egress: []
